@@ -1,3 +1,6 @@
+20100524 (T.S.)
+ - src/padStream.c: added more statistics counters.
+ - README: updated.
 20100423 (T.S.)
  - updated RELEASE_NOTES; released udpComm-R1-2-0
 20100416 (T.S.)
